fix weird image on mobile about page & fix lazy image loading on projects page

--- a/css/index.css
+++ b/css/index.css
@@ -24,7 +24,7 @@ nav {
 
 @media screen and (max-width: 900px) {
     main {
-        font-size: 1rem; 
+        font-size: .8rem; 
     }
 }
 
